# AeroScan

./: .gitignore  =2.0  CLAUDE.md  README.md  SPEC.md  aeroscan.db  pyproject.toml  run.sh
docs/: RESUME-HERE.md  TEST-FLIGHT-RUNBOOK.md
docs/architecture/: kmz-flow.md  manifold-deployment.md  rc-companion-bringup.md  rc-companion-summary-exec-v2.nl.md  rc-companion-summary-exec.md  rc-companion-summary-exec.nl.md
docs/flights/2026-06-12-first-custom-flight/: ANALYSIS.md  FLIGHT-REVIEW.md  README.md
docs/flights/2026-06-12-first-custom-flight/flown-kmz/: 20260612T122123Z_441.augmented.lean.kmz  20260612T122123Z_441.summary.json
docs/superpowers/plans/: 2026-05-25-aeroscan-mission-cockpit.md  2026-05-25-manifold-readiness-handshake.md  2026-05-25-session-status-and-next-steps.md
docs/superpowers/specs/: 2026-05-25-manifold-service-readiness-handshake-design.md
examples/: l_shaped.py  pitched_roof.py  simple_box.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  app.css  store.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: DroneAnimation.tsx  DroneInfo.tsx  MapView.tsx  PerfPanel.tsx  PhaseTimingsHud.tsx  Sidebar.tsx  Stats.tsx  VersionList.tsx  Viewer3D.tsx
rc-companion/: README.md  local.properties.example  settings.gradle.kts
rc-companion/app/: build.gradle.kts  proguard-rules.pro
scripts/: bench_icp_target_density.py  bench_kmz.py  build_manifold_devmatch_kmz.py  build_manifold_overlay_kmz.py  bundle_cloud_into_augmented_kmz.py  bundle_manifold_cloud_into_augmented_kmz.py  deploy_to_manifold.sh  preflight_check_manifold.sh  pull_flight_debug.sh  validate_2m_voxel_e2e.py  verify_augmented_kmz.py
src/flight_planner/: __init__.py  __main__.py  _profiling.py  building_import.py  building_presets.py  camera.py  cli.py  geometry.py  gimbal_rewrite.py  kmz_builder.py  kmz_cache.py  kmz_import.py  manifold.py  mission_intent.py  models.py  optimize.py  reconstruct.py  validate.py  visualize.py
src/flight_planner/server/: __init__.py  api.py  database.py  frontend.py  state.py
src/flight_planner/tools/: __init__.py  aim_quality.py  inspect_kmz.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_camera.py  test_cli.py  test_facade_polygon_filter.py  test_geometry.py  test_gimbal_rewrite.py  test_inspect_kmz.py  test_integration.py  test_kmz_builder.py  test_kmz_import.py  test_mapping_polygon_and_transitions.py  test_server.py  test_visualize.py
(+29 files in other folders)
