[project]
name = "flight-planner"
version = "0.1.0"
description = "AeroScan NEN-2767 inspection flight planner - generates DJI-compatible KMZ waypoint missions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyproj>=3.6",
    "djikmz>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "sqlalchemy>=2.0",
]
mesh = [
    "open3d>=0.17",
    "trimesh>=3.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
