[project]
name = "flight-planner"
version = "0.1.0"
description = "AeroScan NEN-2767 inspection flight planner - generates DJI-compatible KMZ waypoint missions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyproj>=3.6",
    "djikmz>=0.1.0",
    "networkx>=3.0",
    "scipy>=1.10",
    "trimesh>=3.21",
    "rtree>=1.0",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.7",
]
mesh = [
    "open3d>=0.17",
    "pyrender>=0.1.45",
    "fast-simplification>=0.1",
    "pymeshlab>=2023.12",
    "cgal>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
